feat: get media stream properties
