# docs/swagger.json
@@ -330,12 +330,6 @@
                         "in": "formData"
                     },
                     {
-                        "type": "string",
-                        "description": "Original filename or custom filename",
-                        "name": "filename",
-                        "in": "formData"
-                    },
-                    {
                         "type": "boolean",
                         "description": "Is public (true/false)",
                         "name": "is_public",
