# models/track.model.go
@@ -1,25 +1,27 @@
 package models
 
 import (
+	"encoding/json"
 	"time"
 )
 
 type Track struct {
-	ID          int        `json:"id" db:"id"`
-	UserID      int        `json:"user_id" db:"user_id"`
-	Filename    string     `json:"filename" db:"filename"`
-	Metadata    string     `json:"metadata" db:"metadata"`
-	Title       string     `json:"title" db:"title"`
-	Artist      string     `json:"artist" db:"artist"`
-	Album       string     `json:"album" db:"album"`
-	Genre       string     `json:"genre" db:"genre"`
-	Description string     `json:"description" db:"description"`
-	Duration    int        `json:"duration" db:"duration"`
-	IsPublic    bool       `json:"is_public" db:"is_public"`
-	PlayCount   int        `json:"play_count" db:"play_count"`
-	CreatedAt   time.Time  `json:"created_at" db:"created_at"`
-	UpdatedAt   time.Time  `json:"updated_at" db:"updated_at"`
-	DeletedAt   *time.Time `json:"deleted_at,omitempty" db:"deleted_at"`
+	ID       int    `json:"id" db:"id"`
+	UserID   int    `json:"user_id" db:"user_id"`
+	Filename string `json:"filename" db:"filename"`
+	// Metadata    map[string]interface{} `json:"metadata" db:"metadata"`
+	Metadata    json.RawMessage `json:"metadata" db:"metadata"`
+	Title       string          `json:"title" db:"title"`
+	Artist      string          `json:"artist" db:"artist"`
+	Album       string          `json:"album" db:"album"`
+	Genre       string          `json:"genre" db:"genre"`
+	Description string          `json:"description" db:"description"`
+	Duration    int             `json:"duration" db:"duration"`
+	IsPublic    bool            `json:"is_public" db:"is_public"`
+	PlayCount   int             `json:"play_count" db:"play_count"`
+	CreatedAt   time.Time       `json:"created_at" db:"created_at"`
+	UpdatedAt   time.Time       `json:"updated_at" db:"updated_at"`
+	DeletedAt   *time.Time      `json:"deleted_at,omitempty" db:"deleted_at"`
 }
 
 type TrackResponse struct {
